      PMA_mysql_fetch_array return value for last result (bug #905223).
    * browse_foreigners.php, libraries/common.lib.php,
      libraries/display_tbl.lib.php, libraries/relation.lib.php,
      libraries/sqlparser.lib.php, libraries/string.lib.php,
      libraries/transformations/text_plain__substr.inc.php: Use charset aware
      substr and strlen functions (bugs #854755 and #910575).

2004-03-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 909752, floating point digit
    * libraries/sqlparser.lib.php: bug 906551, GRANT...TO

2004-03-03 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, tbl_replace_fields.php: bug 907510, invalid
      escaping of + in ENUM

2004-03-01 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.5.6 released from branch MAINT_2_5
    * libraries/common.lib.php: change Revision number to trigger execution
      of compatibility module config_import.lib.php, because cookie
      login does not work if LoginCookieValidity is not defined

2004-02-29 Alexander M. Turek  <howcanisleepwithyourvoiceinmyhead@derrabus.de>
    * tbl_select.php: Fixed bug #887505 (PMA does not add MySQL charsets to
      WHERE clauses).
    * libraries/dbi/mysql.dbi.lib.php: Yet another ungly fix concerning the
      missing mysql_get_client_info() function.

2004-02-27 Michal Cihar  <imback@cihar.com>
    * config.inc.php, libraries/config_import.lib.php,
      libraries/auth/cookie.auth.lib.php: Encrypted password is working only
      for limited (configurable) time, user name is encrypted (RFE #902295).

2004-02-26 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 905066, memory eater, thanks to xuefer

2004-02-24 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: bug 903450, typo
    * tbl_row_delete.php: bug 878995: mult_submits.inc.php should not be
      called twice

2004-02-18 Marc Delisle  <lem9@users.sourceforge.net>