@@ -15,6 +15,8 @@ $Source$
       libraries/sqlparser.lib.php, libraries/string.lib.php,
       libraries/transformations/text_plain__substr.inc.php: Use charset aware
       substr and strlen functions (bugs #854755 and #910575).
+    * export.php: Fix buffer length counting, fix error detection.
+    * libraries/export/latex.php: Fix undefined variable warning.
 
 2004-03-05 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.lib.php: bug 909752, floating point digit
